# web-traffic-classification

./: .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/: 2_model.ipynb  bot or not.ipynb
