[tool.poetry]
name = "web-traffic-classification"
version = "0.1.0"
description = ""
authors = ["Siqi Li <lisiqi9347@gmail.com>"]
readme = "README.md"
packages = [{include = "web_traffic_classification"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
jupyter = "^1.0.0"
ydata-profiling = "^4.8.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
